--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.vscode/
+packages.microsoft.gpg
 
 npm-debug.log*
 yarn-debug.log*
